--- a/about.html
+++ b/about.html
@@ -26,17 +26,17 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link active border-bottom mx-1" aria-current="page" href="#" target="_blank">Home</a>
+            <a class="nav-link active border-bottom mx-1" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link border-bottom hover mx-1" href="#" target="_blank">Servicios</a>
+            <a class="nav-link border-bottom hover mx-1" href="#">Servicios</a>
           </li>
-          <li class="nav-item border-bottom mx-1">
+          <!-- <li class="nav-item border-bottom mx-1">
             <a class="nav-link" href="#">Blog</a>
           </li>
           <li class="nav-item border-bottom mx-1">
             <a class="nav-link" href="#">YouTube</a>
-          </li>
+          </li> -->
           <li class="nav-item border-bottom mx-1">
             <a class="nav-link" href="#">Contacto</a>
           </li>
@@ -52,81 +52,117 @@
       </div>
 
       <div class="col-xl-6 d-flex flex-column align-self-center">
-        <h3 class="titleDesktopSmall"  style="text-align:justify;">
-          ¿Te pasó alguna vez mirarte al espejo y no reconocerte? 
+        <h3 class="titleDesktopSmall mt-4" style="text-align:justify;">
+          Algo sobre mi...
         </h3>
-        <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
-          Te cuento que pasé hace poco ese proceso. Luego de la llegada de mi tan esperado bebé, Felipe, me olvidé un poquito de mí, todo mi mundo se centró en ser la mejor versión de mí como mamá, un nuevo rol que en el que me tocaba descubrirme y lo sigo haciendo a diario. 
-          <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
-            Recién a los nueve meses de maternidad parecía que todo volvía a encaminarse, porque de verdad la ropa ya no me quedaba para nada igual, estaba frente a un nuevo escenario desafiante para muchas mamás: conocerse con un nuevo cuerpo, el cual había tenido la GRAN capacidad de albergar a un ser humano, pero que ahora tocaba redescubrir…
-          </p>
-
-          <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
-            Después de un proceso interno muy profundo que me llevó un año y medio puedo abrir las puertas a uno de los nuevos servicios que llegan con la renovación de la web.   
-          </p>
- 
+        <p class="paragraphDesktopLarge my-2 mt-4" style="text-align:justify;">
+          Primero: ¡GRACIAS! por tomarte el tiempo de pasar por acá, de querer conocer un poquito más de la historia que
+          hay detrás de esta mujer, mamá, esposa y asesora de imagen.
         </p>
-        <div class="text-center">
 
-          <a href="/" style="text-decoration: none;" class="btn btn-vv mt-3">
-            Volver
-          </a>
+        <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+          Hace varios años atrás, después de una búsqueda exhaustiva sobre lo que realmente me apasionaba, me encuentro
+          con el asesoramiento de imagen y comienzo a darle voz y voto a mi amor por la moda: por ayudar a otras y por
+          manifestar eso que llevamos por dentro pero que muchas veces nos cuesta mostrar
+        </p>
 
-        </div>
+        <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+          ¿Fue fácil? Claro que no, estoy resumiendo en breves líneas un proceso que me llevó meses, con avances y
+          retrocesos, con voces a favor y muchas otras en contra, pero acá estamos, con una nueva versión de mí.
+        </p>
+
+        </p>
+
       </div>
     </section>
-    <section class="row mt-5">
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
+    <section class="row mt-3">
+      <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+        ¿Será ésta mi mejor versión? Día a día podemos mejorar, podemos ser más nosotras, nos podemos encontrar con
+        quien realmente queremos reflejar, así que podríamos comenzar diciendo que una de las premisas de esta marca
+        personal es que: TODOS LOS DÍAS PODEMOS SER UNA NUEVA VERSIÓN DE NOSOTRAS MISMAS.
+      </p>
+      <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+        Luego de definir cuál era la carrera que quería hacer, llegó la pandemia, que como a todos, nos cambió, nos
+        enseñó una revalorización de las cosas que quizás no teníamos antes.
+      </p>
+      <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+        En medio de esa pandemia llega mi tan amado hijo Felipe y con él llega la montaña rusa que es la maternidad
+        (porque nada nos prepara para ser madres, menos en pandemia, menos con reposo forzado) pero salimos adelante,
+        gracias al apoyo de mi esposo, mi familia y quienes siempre están presentes. Y de a poco, el camino de
+        reencontrarme conmigo misma fue viendo la luz… esto pasó recién cuando Feli tenía un año y medio. ¡Sí! yo
+        también me miraba en espejo y no sabía que ponerme para volver a sentirme un “poquito yo”, de ahí que pude crear
+        uno de los cursos que más amo brindar y es ESTILO MAMÁ, porque después de la experiencia de la maternidad la
+        mirada cambia, las prioridades también y necesitamos volver a conocernos con la nueva mujer que somos.
+      </p>
+      <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+        El tiempo pasó y con eso también los procesos, algunos no son para escribir acá pero sí puedo decirte que las
+        decisiones que tomamos en nuestra vida nos llevan a conversaciones y situaciones que quizás no imaginamos. El
+        último y gran proceso pasó en febrero de 2023, la llegada de bebé 2 había sido toda una sorpresa inesperada,
+        había que rearmar, repensar, pero unas semanas después lamentablemente sufrimos la pérdida de ese bebé. Por eso
+        te digo que la vida se trata de procesos, y todo lo que manifestamos por fuera es un reflejo de lo que llevamos
+        por dentro, de como nos vemos, como nos sentimos.
+      </p>
+      <p class="paragraphDesktopLarge my-2" style="text-align:justify;">
+        Hoy es el inicio de una nueva etapa, hoy puedo decir que renuncié a mi trabajo en relación de dependencia (es
+        algo que ya tiene fecha de vencimiento), puedo decirte que me la juego al 100% por este sueño ¡y que eso hace
+        que me corra un escalofrío por todo el cuerpo que no puedo explicarlo! pero también puedo asegurarte que es una
+        de las decisiones que más paz me dio en la vida.
+      </p>
+
+      <h3 class="titleDesktopSmallBrown text-start mt-4">
+        ¿ESTÁS LISTA PARA IR POR MÁS?
+      </h3>
+
+      <br />
+      <br />
+
+      <div class="text-start m-5">
+
+        <a href="/" style="text-decoration: none;" class="btn btnVV mt-3">
+          Volver
+        </a>
+
+      </div>
     </section>
   </div>
 
 
-      <footer class="footer mt-5 row footer mt-auto py-3">
+  <footer class="footer mt-5 row footer mt-auto py-3">
 
-        <div class="container">
+    <div class="container">
 
 
-          <div class="col-md-2 text-center align-self-center">
-            <!-- <img class="p-4" src="img/logo.png" alt="Logo hablá para ser escuchado" />
+      <div class="col-md-2 text-center align-self-center">
+        <!-- <img class="p-4" src="img/logo.png" alt="Logo hablá para ser escuchado" />
         <img src="img/logoAsif.png" alt="Logo ASIF" /> -->
-          </div>
+      </div>
 
-          <div class="col-md-8 text-center align-self-center">
-            <!-- <p class="paragraphDesktopWhite text-center">La campaña fue desarrollada por Novartis | Mayo 2022. </p> -->
-            <!-- <img class="imgNov" src="img/logoNov.png" alt="Logo Novartis"/> -->
-          </div>
+      <div class="col-md-8 text-center align-self-center">
+        <!-- <p class="paragraphDesktopWhite text-center">La campaña fue desarrollada por Novartis | Mayo 2022. </p> -->
+        <!-- <img class="imgNov" src="img/logoNov.png" alt="Logo Novartis"/> -->
+      </div>
 
-          <div class="col-md-2 text-center align-self-center">
-            <a href="#" target="_blank"><img
-                class="iconsRedes" src="img/facebook.png"
-                alt="Icon que redirige al instagram @hablaparaserescuchado" /></a>
-            <a href="#" target="_blank"><img class="iconsRedes"
-                src="img/instagram.png" alt="Icon que redirige al facebook @hablaparaserescuchado" /></a>
-            <p class="paragraphDesktopWhite">Copyrigth-2022</p>
-          </div>
-
+      <div class="col-md-2 text-center align-self-center">
+        <a href="#" target="_blank"><img class="iconsRedes" src="img/facebook.png"
+            alt="Icon que redirige al instagram @hablaparaserescuchado" /></a>
+        <a href="#" target="_blank"><img class="iconsRedes" src="img/instagram.png"
+            alt="Icon que redirige al facebook @hablaparaserescuchado" /></a>
+        <p class="paragraphDesktopWhite">Copyrigth-2022</p>
+      </div>
 
 
-        </div>
 
-      </footer>
+    </div>
 
+  </footer>
 
 
 
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
